[project]
name = "forexfactory"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "cloudscraper",
    "python-telegram-bot>=21.0",
    "motor>=3.6",
    "apscheduler>=3.10,<4",
    "python-dotenv>=1.0",
    "pytz",
]
[tool.uv.sources]
cloudscraper = { git="https://github.com/VeNoMouS/cloudscraper", tag="3.0.0"}
