[project]
name = "forexfactory"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "cloudscraper",
    "python-telegram-bot>=21.0",
    "motor>=3.6",
    "apscheduler>=3.10,<4",
    "python-dotenv>=1.0",
    "pytz",
    "feedparser>=6.0",
    "anthropic>=0.40",
    "requests>=2.31",
    "google-genai>=1.0",
]
[tool.uv.sources]
cloudscraper = { git="https://github.com/VeNoMouS/cloudscraper", tag="3.0.0"}

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]
